Fixed char list size

--- a/index.html
+++ b/index.html
@@ -36,28 +36,28 @@
 
     <div id="index2" style="display: none; height: 100vh; width: 100vw;">
         <div class="d-flex w-100 h-100">
-            <div data-slot="1" class="charSlot card mx-auto my-auto text-center bg-dark text-light" style="width: 20rem; height: 24rem;">
+            <div data-slot="1" class="charSlot card mx-auto my-auto text-center bg-dark text-light" style="width: 20vw; height: 40vh;">
                 <div class="card-body">
                     <h5 class="card-title">+</h5>
                     <hr>
                     <p class="lead">Create a new charater</p>
                 </div>
             </div>
-            <div data-slot="2" class="charSlot card mx-auto my-auto text-center bg-dark text-light" style="width: 20rem; height: 24rem;">
+            <div data-slot="2" class="charSlot card mx-auto my-auto text-center bg-dark text-light" style="width: 20vw; height: 40vh;">
                 <div class="card-body">
                     <h5 class="card-title">+</h5>
                     <hr>
                     <p class="lead">Create a new charater</p>
                 </div>
             </div>
-            <div data-slot="3" class="charSlot card mx-auto my-auto text-center bg-dark text-light" style="width: 20rem; height: 24rem;">
+            <div data-slot="3" class="charSlot card mx-auto my-auto text-center bg-dark text-light" style="width: 20vw; height: 40vh;">
                 <div class="card-body">
                     <h5 class="card-title">+</h5>
                     <hr>
                     <p class="lead">Create a new charater</p>
                 </div>
             </div>
-            <div data-slot="4" class="charSlot card mx-auto my-auto text-center bg-dark text-light" style="width: 20rem; height: 24rem;">
+            <div data-slot="4" class="charSlot card mx-auto my-auto text-center bg-dark text-light" style="width: 20vw; height: 40vh;">
                 <div class="card-body">
                     <h5 class="card-title">+</h5>
                     <hr>
