--- a/index.html
+++ b/index.html
@@ -44,22 +44,22 @@
                 </div>
             </div>
             <div data-slot="2" class="charSlot card mx-auto my-auto text-center bg-dark text-light" style="width: 20vw; height: 40vh;">
-                <div class="createChar card-body">
-                    <h5 class="card-title">+</h5>
+                <div class="card-body">
+                    <h5 class="createChar card-title">+</h5>
                     <hr>
                     <p class="lead">Create a new charater</p>
                 </div>
             </div>
             <div data-slot="3" class="charSlot card mx-auto my-auto text-center bg-dark text-light" style="width: 20vw; height: 40vh;">
-                <div class="createChar card-body">
-                    <h5 class="card-title">+</h5>
+                <div class="card-body">
+                    <h5 class="createChar card-title">+</h5>
                     <hr>
                     <p class="lead">Create a new charater</p>
                 </div>
             </div>
             <div data-slot="4" class="charSlot card mx-auto my-auto text-center bg-dark text-light" style="width: 20vw; height: 40vh;">
-                <div class="createChar card-body">
-                    <h5 class="card-title">+</h5>
+                <div class="card-body">
+                    <h5 class="createChar card-title">+</h5>
                     <hr>
                     <p class="lead">Create a new charater</p>
                 </div>
@@ -71,12 +71,45 @@
         <div class="jumbotron mt-5 bg-dark text-light">
             <img class="d-flex mx-auto" src="./img/logo.png" style="width: 128px;"/>
             <h1 class="text-center">Welcome to <span style="color: cornflowerblue;">Paradise RP</span></h1>
-            <h3 class="text-center">Press <span style="color: cornflowerblue;">ENTER</span> to begin.</h3>
+            <h5 class="text-center">We're just loading some stuff. It shouldn't take long</h5>
         </div>
 
         <div class="container mx-auto mt-3 text-center"> 
             <div class="spinner-border" role="status"></div>          
-            <p id="l-text" class="mt-2">Loading user data...</p>
+            <p id="l-text" class="mt-2">Fetching user data...</p>
+        </div>
+    </div>
+
+    <div class="modal" id="charForm" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title text-center">Create a New Character</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form id="charAForm">
+                        <div class="form-group">
+                            <label for="charName">Character Name</label>
+                            <input type="text" class="form-control" id="charName" placeholder="John" required />
+                        </div>
+                        <div class="form-group">
+                            <label for="charName">Character Surename</label>
+                            <input type="text" class="form-control" id="charSName" placeholder="Doe" required />
+                        </div>
+                        <div class="form-group">
+                            <label for="charAge">Character Age</label>
+                            <input type="number" class="form-control" id="charAge" min="18" max="99" required />
+                        </div>
+                        <div class="modal-footer">
+                            <button type="submit" id="charConf" class="btn btn-success">Create</button>
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -94,7 +127,7 @@
                     $('#index').hide();
                     $('#loading').show();
                     setTimeout(() => {
-                        $('#l-text').html('Loading characters...');
+                        $('#l-text').html('Fetching characters...');
                         setTimeout(() => {
                             $('#loading').hide();
                             $('#index2').show();
@@ -103,7 +136,7 @@
                 }
             });
 
-            let divs = document.getElementsByClassName("charSlot");
+            const divs = document.getElementsByClassName("charSlot");
             for(let i = 0; i < 4; i++) {
                 // console.log(divs[i])
                 $(divs[i]).hover(() => {
@@ -111,17 +144,40 @@
                 }, () => {
                     $(divs[i]).css('opacity', '0.75');
                 });
+
+                $(divs[i]).click(() => {
+                    // alert('Create Slot ' + i+1)
+                    $('#charForm').modal('toggle');
+                });
+
             }
 
-            let create = document.getElementsByClassName("createChar");
-            for(let i = 0; i < 4; i++) {
-                // console.log(divs[i])
-                $(divs[i]).click(() => {
-                    $(divs[i]).css('opacity', '0.25');
-                }, () => {
-                    $(divs[i]).css('opacity', '0.75');
-                });
-            }
+            $("#charAForm").submit((e) => {
+                e.preventDefault();
+                console.log($("#charName").val() + ' ' + $("#charSName").val() + ' ' + $("#charAge").val())
+                $('#charForm').modal('toggle');
+                $('#index2').hide();
+                $('#l-text').html('Creating character...');
+                $('#loading').show();
+                setTimeout(() => {
+                    $('#l-text').html('Validating changes...');
+                    setTimeout(() => {
+                        $('#loading').hide();
+                    }, 2500)
+                }, 2500);
+            });
+
+            // $('#charConf').click(() => {
+                
+            // });
+
+            // let create = document.getElementsByClassName("createChar");
+            // for(let i = 0; i < 4; i++) {
+            //     // console.log(divs[i])
+            //     $(create[i]).click(() => {
+            //         alert('teste')
+            //     });
+            // }
 
             // 
             // console.log(divs[0].getAttribute('data-slot'))
